[metadata]
name = dispax
version = 0.0.1
description = DFT-D implementation for Jax
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_files = LICENSE

[options]
package_dir =
    =src
packages = find:
install_requires =
    numpy
    jax
tests_require =
    pytest
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src
